--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "bootstrap": "^4.5.3",
     "next": "latest",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
