--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
     "@zeit/next-css": "^1.0.1",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "next": "latest",
     "react": "^16.12.0",
