--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "bootstrap": "^4.5.3",
     "next": "latest",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-schemaorg": "^1.2.0",
+    "schema-dts": "^0.7.1"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
